kubernetes/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aiops-backend
  namespace: aiops-system
  labels:
    app.kubernetes.io/name: aiops-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: aiops-backend
  template:
    metadata:
      labels:
        app.kubernetes.io/name: aiops-backend
    spec:
      serviceAccountName: aiops-agent-sa
      securityContext:
        runAsNonRoot: true
        runAsUser: 999
        fsGroup: 999
      containers:
        - name: backend-aiops-k8s
          securityContext:
            allowPrivilegeEscalation: false
            seccompProfile:
              type: RuntimeDefault
            capabilities:
              drop:
                - ALL
          image: zain75117/aiops-k8s-be:1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
              name: http
          volumeMounts:
            - name: data-volume
              mountPath: /app/data
            - name: dashboard-dir
              mountPath: /app/dashboard
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
          livenessProbe:
            httpGet:
              path: /api/v1/status
              port: 8000
            initialDelaySeconds: 15
            periodSeconds: 20
          readinessProbe:
            httpGet:
              path: /api/v1/status
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 10
            
      volumes:
        - name: data-volume
          persistentVolumeClaim:
            claimName: aiops-backend-pvc
        - name: dashboard-dir
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: aiops-backend-service
  namespace: aiops-system
  labels:
    app.kubernetes.io/name: aiops-backend
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: aiops-backend
  ports:
    - port: 8000
      targetPort: 8000
      name: http
